Archive2/31/a2318d2b508dc2/output
main.cpp:2:16: error: template declaration of 'constexpr const auto pi'
 constexpr auto pi = T{3.14};
                ^
