Archive2/31/a2318d2b508dc2/main.cpp
template<class T> 
constexpr auto pi = T{3.14};